--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/SalvadorBanuelos424/jest-another-RPG#readme",
   "devDependencies": {
     "jest": "^28.0.0"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.4"
   }
 }
